prevent auto-fullscreen and video controls on mobile

--- a/project-2/final/index.css
+++ b/project-2/final/index.css
@@ -43,7 +43,6 @@ body {
     /* border: 1px solid pink; */
     overflow: none;
 }
-
 .tv-video {
     object-fit: fill;
     position: fixed;
@@ -53,6 +52,9 @@ body {
     top: 50%;
     transform: translate(-50%,-50%);
     z-index: 0;
+    display: none;
+}
+video::-webkit-media-controls-start-playback-button {
     display: none;
 }
 
